sqlite login Users

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PetEmotionsAppContext": "Data Source=PetEmotionsAppContext-2c0277ec-65c4-424b-8312-114e80e10231.db"
+  }
 }
